spacing fixes and more for mobile

--- a/main.scss
+++ b/main.scss
@@ -198,9 +198,9 @@ background-color: $red;
 text-decoration: none;
 
  @include breakpoint($mobile-breakpoint) {
-    height: 3.5rem; 
-    width: 15.625rem;
-    font-size: 1.125rem;
+    height: 4.25rem; 
+    width: 19.25rem;
+    font-size: 1.5rem;
     margin: 1.25rem 0;
  }
 }
@@ -230,13 +230,13 @@ text-decoration: none;
  display: flex;
  background-color: white;
  align-items: center;
- margin: 6.25rem 0 6.25rem 0;
+ margin: 6.25rem 0;
  overflow: hidden;
  justify-content: center;
 
    @include breakpoint($mobile-breakpoint) {
    scroll-snap-type: x mandatory;
-   margin: 0 0 2.5rem 0;
+   margin: 0 0 1.5rem 0;
    overflow-x: auto;
    justify-content: flex-start;
 
@@ -265,8 +265,8 @@ text-decoration: none;
  width: 6rem;
 
  @include breakpoint($mobile-breakpoint) {
-    height: 6rem;
-    width: 6rem;
+    height: 4.5rem;
+    width: 4.5rem;
  }
 }
 
@@ -391,6 +391,12 @@ margin: 0 auto;
     justify-content: space-between;
     width: 100%;
     padding: 0.25rem 0 1.75rem 0;
+
+    @include breakpoint($mobile-breakpoint) {
+    justify-content: left;
+    
+ }
+
  }
 
  .stars {
@@ -480,7 +486,7 @@ margin-bottom: 12.5rem;
 
 @include breakpoint($mobile-breakpoint) {
     flex-direction: column;
-    margin-bottom: 6.25rem;
+    margin-bottom: 2.5rem;
  }
 }
 
@@ -488,8 +494,10 @@ margin-bottom: 12.5rem;
     display: flex;
     height: 460px;
     width: 50%;
+
     @include breakpoint($mobile-breakpoint) {
     width: 100%;
+    height: auto;
     
  }
 }
@@ -542,7 +550,7 @@ footer {
     height: auto;
 
     @include breakpoint($mobile-breakpoint) {
-    padding: 5rem 1.25rem;
+    padding: 4rem 1.25rem;
     gap: 2.5rem;
     height: auto;
 
